fix media query issue and nav z-index issue

--- a/src/App.css
+++ b/src/App.css
@@ -119,7 +119,7 @@ nav .wrapper {
 .menuIcon {
   position: absolute;
   transition: 0.5s;
-  z-index: 20;
+  z-index: 30;
   top: 5px;
   right: 4%;
   padding: 20px;
@@ -176,7 +176,7 @@ nav .wrapper {
 .mainMenu {
   background: #BCBCA6;
   position: absolute;
-  z-index: 10;
+  z-index: 20;
   width: 0;
   height: 0;
   top: 0;
@@ -273,7 +273,7 @@ nav .wrapper {
   padding: 20px;
   max-width: 460px;
   position:relative;
-  z-index:20;
+  z-index:10;
   background-color: #bcbca67d;
   border-radius: 5px;
 }
@@ -296,7 +296,7 @@ nav .wrapper {
   margin: 0 auto;
   padding: 10px;
   position:relative;
-  z-index:20;
+  z-index:10;
   color: #545152;
   background-color: #bcbca6ce;
 }
@@ -376,6 +376,12 @@ footer a{
   .branch {
     width: 30%;
   }
+  .imgContainer{
+    right: -100px;
+  }
+  .imgContainer2 {
+    left: -100px;
+  }
 }
 /* menu will need to switch to mobile menu at ~800px */
 @media (max-width: 800px) {
@@ -396,11 +402,14 @@ footer a{
   .haikuContainer {
     padding: 40px 40px 60px;
   }
-  .imgContainer{
-    right: -80px;
-  }
   .imgContainer2 {
-    left: -80px;
+    display:none;
+  }
+  .initialWordForm {
+    margin-left: 0;
+    padding-left: 0;
+    padding-right: 5px;
+    max-width: 400px;
   }
 }
 
@@ -420,18 +429,6 @@ footer a{
   }
   footer {
     font-size: 0.9rem;
-  }
-}
-
-@media(max-width: 600px){
-  .imgContainer2 {
-    display:none;
-  }
-  .initialWordForm {
-    margin-left: 0;
-    padding-left: 0;
-    padding-right: 5px;
-    max-width: 400px;
   }
 }
 
@@ -475,6 +472,7 @@ footer a{
   }
   .imgContainer {
     opacity: 0.4;
+    right: -60px;
   }
   .individualPoem li{
     font-size: 1rem;
